5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1846_2604.log
== TEST (2019-06-25 19:09:03) 
-- CODE:
from numpy import *
matriz = array(eval("Matriz do pagamento: "))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	for j in range(colunas):
		if matriz[i, j] == max(matriz[:,j])
			print(matriz[i, j])
-- ERROR:
File "XXXX", line 8
    if matriz[i, j] == max(matriz[:,j])
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:09:30) 
-- CODE:
from numpy import *
matriz = array(eval("Matriz do pagamento: "))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	for j in range(colunas):
		if matriz[i, j] == max(matriz[:,j]):
			print(matriz[i, j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:09:55) 
-- CODE:
from numpy import *

matriz = array(eval("Matriz do pagamento: "))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	for j in range(colunas):
		if matriz[i, j] == max(matriz[:,j]):
			print(matriz[i, j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:10:08) 
-- CODE:
from numpy import *

matriz = array(eval("Pagamentos: "))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	for j in range(colunas):
		if matriz[i, j] == max(matriz[:,j]):
			print(matriz[i, j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:10:29) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	for j in range(colunas):
		if matriz[i, j] == max(matriz[:,j]):
			print(matriz[i, j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:12:05) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for j range(colunas):
	print(max(matriz[:,j]))
-- ERROR:
File "XXXX", line 7
    for j range(colunas):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:12:12) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for j in range(colunas):
	print(max(matriz[:,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:12:27) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for j in range(linhas):
	print(max(matriz[:,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 19:12:46) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 19:12:53) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- EXECUTION TIME:
0.90735
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:45:53) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]

for i in range(linhas):
	print(max(matriz[i, :]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:45:56) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]

for i in range(linhas):
	print(max(matriz[i, :]))
-- EXECUTION TIME:
1.2068
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:46:06) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:46:11) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- EXECUTION TIME:
1.18541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2604/main.py", line 7, in <module>
    print(max(matriz[i, :]))
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:46:23) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:46:29) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:46:34) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[1]

for i in range(linhas):
	print(max(matriz[i, :]))
-- EXECUTION TIME:
1.09966
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2604/main.py", line 7, in <module>
    print(max(matriz[i, :]))
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:46:41) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]

for i in range(linhas):
	print(max(matriz[i, :]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:46:48) 
-- CODE:
from numpy import *

matriz = array(eval(input("Pagamentos: ")))
linhas = shape(matriz)[0]

for i in range(linhas):
	print(max(matriz[i, :]))
-- EXECUTION TIME:
1.14124
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
